# foundry

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  start.bat  start.sh  stop.bat  stop.sh
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  20250117_0001_initial_schema.py
backend/src/foundry/: __init__.py  config.py  main.py
backend/src/foundry/api/: __init__.py
backend/src/foundry/api/middleware/: __init__.py  correlation.py  error_handler.py  logging.py
backend/src/foundry/api/v1/: __init__.py  auth.py  deployments.py  deps.py  experiments.py  features.py  models.py  monitoring.py  pipelines.py
backend/src/foundry/core/: __init__.py  events.py  exceptions.py  security.py
backend/src/foundry/domain/: __init__.py
backend/src/foundry/domain/deployments/: __init__.py  schemas.py  service.py
backend/src/foundry/domain/experiments/: __init__.py  schemas.py  service.py
backend/src/foundry/domain/features/: __init__.py  schemas.py  service.py
backend/src/foundry/domain/monitoring/: __init__.py  schemas.py  service.py
backend/src/foundry/domain/pipelines/: __init__.py  schemas.py  service.py
backend/src/foundry/domain/registry/: __init__.py  schemas.py  service.py
backend/src/foundry/domain/tenants/: __init__.py  schemas.py  service.py
backend/src/foundry/infrastructure/: __init__.py
backend/src/foundry/infrastructure/cache/: __init__.py  redis.py
backend/src/foundry/infrastructure/database/: __init__.py  base.py  models.py  repository.py  session.py
backend/src/foundry/infrastructure/storage/: __init__.py  s3.py
backend/src/foundry/workers/: __init__.py  celery_app.py
backend/src/foundry/workers/tasks/: deployments.py  experiments.py  features.py  monitoring.py  pipelines.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: test_security.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/stores/: app-store.ts
frontend/src/types/: index.ts
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: prometheus.yml
scripts/: init-db.sql  init-timescaledb.sql  seed-data.py  setup-dev.sh
(+44 files in other folders)
